--- a/helloworld.html
+++ b/helloworld.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Hello World!</h1>
+<p style="color:rgb(255, 99, 70);">You know you've got this working if you can see that this text is red!</p>
 
 </body>
 </html>
